--- a/Lab02_AIML.ipynb
+++ b/Lab02_AIML.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNwVNt2o3MbHbCGpPhRVY8d",
+      "authorship_tag": "ABX9TyMnOQCT9aTWH/ZAnGJ0y+cA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +50,7 @@
       "cell_type": "code",
       "source": [
         "graph = {0:[1,3], 1:[0,2,3], 2 :[4,1,5] , 3:[4,0,1], 4:[2,3,5], 5:[4,2] }\n",
-        "print(\"the adjacency list representing the grapg is \")\n",
+        "print(\"the adjacency list representing the graph is \")\n",
         "print(graph)\n"
       ],
       "metadata": {
@@ -58,15 +58,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "orsuNicBDiKJ",
-        "outputId": "7b921a4e-1c37-4373-99c5-8ee460986d6f"
+        "outputId": "a2323956-b870-43fc-e29b-35a322228bbf"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "the adjacency list representing the grapg is \n",
+            "the adjacency list representing the graph is \n",
             "{0: [1, 3], 1: [0, 2, 3], 2: [4, 1, 5], 3: [4, 0, 1], 4: [2, 3, 5], 5: [4, 2]}\n"
           ]
         }
